--- a/project-manager.html
+++ b/project-manager.html
@@ -112,7 +112,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/velodyne/jobs/1789027'>Job Application for Automotive Project Manager at Velodyne</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/velodyne/jobs/1789027'>Job Application for Automotive Project Manager at Velodyne</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -134,7 +134,7 @@
 <p><span class="badge badge-light">Buenos Aires</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/avant/dd856702-45ba-470a-aaf8-9eb6ddf6ba8b'>Avant - Technical Project Manager, Cloud Infrastructure</a></h5> 
+<h5><a href='https://jobs.lever.co/avant/dd856702-45ba-470a-aaf8-9eb6ddf6ba8b'>Avant - Technical Project Manager, Cloud Infrastructure</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -192,7 +192,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/trendkite/6b566378-553a-4bd7-9873-b34a87f00c41'>TrendKite/Cision - Senior Technical Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/trendkite/6b566378-553a-4bd7-9873-b34a87f00c41'>TrendKite/Cision - Senior Technical Program Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -230,11 +230,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AmericanITStaff/743999692408547-project-manager-at-bentonville-ar'>American IT Staff Project Manager at Bentonville, AR | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AmericanITStaff/743999692408547-project-manager-at-bentonville-ar'>American IT Staff Project Manager at Bentonville, AR | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ncianato.referrals.selectminds.com/jobs/translation-project-manager-579'>Translation Project Manager - NATO Careers</a></h5> 
+<h5><a href='https://ncianato.referrals.selectminds.com/jobs/translation-project-manager-579'>Translation Project Manager - NATO Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -378,7 +378,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://right-at-school.workable.com/j/12A8FCA636'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/12A8FCA636'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Washington, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -398,7 +398,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://right-at-school.workable.com/j/2A687BA532'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/2A687BA532'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Washington, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
