Senior UX Designer (m/f/d) focus Usability Concept - designaffairs GmbH     . Job @ NIST (Berlin): Internship UI/UX | JOIN. Skilljar - Senior User Experience (UX) Designer. Skilljar - User Experience (UX) Designer. Automation Anywhere Careers - Designer, Sr. (UX). Ingram Micro Careers - Manager, UX/UI Design.     UX Project Manager at Modus . Farfetch Careers - Senior UI/UX Product Designer. UX Internship - Codal - Career Page. UX/UI Designer - Codal - Career Page. Senior UX/UI Designer - Codal - Career Page. Job Application for User Experience (UX) Strategy & Design Lead at AKQA. UX Researcher (9382691) - PRO Unlimited @ Facebook - Career Page. UX Researcher (9257956) - PRO Unlimited @ Facebook - Career Page. UX Lab Technical Support (9259511) - PRO Unlimited @ Facebook - Career Page. UX Research Lab Technical Support (9362310) - PRO Unlimited @ Facebook - Career Page. Mobile Test Engineer - BUX. Version 1 UX Consultant | SmartRecruiters. Virtuo - UX designer (H/F). Virtuo - UX designer. Sodern ArianeGroup INGENIEUR D'ETUDES MECANIQUES ET THERMIQUE / RESPONSABLE DE LOT DE TRAVAUX F/H | CDI | SmartRecruiters. Job @ Clark Germany (Frankfurt): Lead UX / Design ... | JOIN. Ubisoft Senior UX Designer - Rainbow Six Siege | SmartRecruiters. Intouch Group - VP, UX Director. Intouch Group - VP, UX Director. Sia Partners [nod-A] UX Designer - Sprint Designer H/F | SmartRecruiters. Job @ Westphalia DataLab  (Münster): UX Designer (... | JOIN. Praxis Engineering Careers - UI/UX Designer. UX/UI Designer. Brandwatch Careers - Product/UX Designer.       Senior UX Designer (m/f/d) with focus Usability Concept - designaffairs GmbH     .     UX Writer at MEKARI (PT. Mid Solusi Nusantara) . Sr. UX Designer - Revel Health - Career Page. iflix Careers - Junior UI/UX designer. Capgemini Japan Careers - Senior UX Consultant. Lecle Vietnam UI/UX Designer | SmartRecruiters. Daytwo - Ui/UX Designer. Job Application for Project Manager, UX Writing (Contract) at Sony .... eFront - UX Designer

--- a/ux.html
+++ b/ux.html
@@ -77,7 +77,7 @@
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://codal.applytojob.com/apply/ycpxZC/UX-Internship'>UX Internship - Codal - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://codal.applytojob.com/apply/ycpxZC/UX-Internship'>UX Internship - Codal - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -108,6 +108,12 @@
 <h5><a href='http://profacebook.applytojob.com/apply/lepo3U4XyM/UX-Research-Lab-Technical-Support-9362310'>UX Research Lab Technical Support (9362310) - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://bux.recruitee.com/o/mobile-test-engineer'>Mobile Test Engineer - BUX</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>2 days ago ... About BUX. We're BUX, a tech company that is rocking the world of finance. By 
+taking down all barriers and disrupting the trading experience, we're helping new
+?...</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Version1/743999691885667-ux-consultant'>Version 1 UX Consultant | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
@@ -145,7 +151,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://westphalia-datalab.join.com/jobs/259998-ux-designer-w-m-d'>Job @ Westphalia DataLab  (M?nster): UX Designer (... | JOIN</a></h5> 
+<h5><a href='https://westphalia-datalab.join.com/jobs/259998-ux-designer-w-m-d'>Job @ Westphalia DataLab  (M?nster): UX Designer (... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -199,11 +205,11 @@ research, interaction design, data visualization, prototyping, and the productio
 <p>Jul 18, 2019 ... Project Manager, UX Writing (Contract). San Francisco, CA. Responsibilities: 
 Provides project management expertise for highly complex creative projects,?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/efront/41b6338e-ed98-4753-9e76-ad8f288eb953'>eFront - UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/efront/41b6338e-ed98-4753-9e76-ad8f288eb953'>eFront - UX Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://colorfy.join.com/jobs/271094-ux-ui-designer-f-m'>Job @ colorfy (Berlin): UX/ UI Designer (f/m/*) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://colorfy.join.com/jobs/271094-ux-ui-designer-f-m'>Job @ colorfy (Berlin): UX/ UI Designer (f/m/*) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -268,13 +274,13 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://caseking.recruitee.com/o/lead-ui-ux-designer-mwd-berlin'>
+<h5><a href='https://caseking.recruitee.com/o/lead-ui-ux-designer-mwd-berlin'>
       Lead UI / UX Designer (m/w/d) - Caseking GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/corelight/jobs/1788691'>Job Application for Engineering: Lead UI Engineer (UI/UX) at Job Board</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/corelight/jobs/1788691'>Job Application for Engineering: Lead UI Engineer (UI/UX) at Job Board</a></h5> 
 <p><span class="badge badge-light">San Francisco, California San Francisco Columbus</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -350,7 +356,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://sharpist.join.com/jobs/246378-ui-ux-designer'>Job @ Sharpist (Berlin): UI/(UX) Designer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sharpist.join.com/jobs/246378-ui-ux-designer'>Job @ Sharpist (Berlin): UI/(UX) Designer | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -452,7 +458,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://indg.recruitee.com/o/ux-ui-designer'>
+<h5><a href='https://indg.recruitee.com/o/ux-ui-designer'>
       UX UI Designer - INDG
     </a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
@@ -461,11 +467,6 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <h5><a href='https://jobs.jobvite.com/ekata/job/oYlCafwP'>Ekata, Inc. Careers - UX Designer</a></h5> 
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://www.workable.com/j/270BD644A7'>CCRi - Jobs: Frontend Software Engineer - UI/UX Development and ...</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>1 day ago ... Are interested in data mining, analytics, and/or machine learning. We're looking 
-for candidates with solid technical foundations and a desire to continue learning.</p>
 <hr/>
 
 
